# test-cmake-ppa

./: .travis.yml  CMakeLists.txt  InRelease  Packages  Release  Release.gpg  main.cpp
dists/simdjson/: InRelease  Release  Release.gpg
